# codescribe-cli

./: .codescribeignore  .gitignore  README.md  codescribe.json  pyproject.toml  requirements.txt
src/codescribe/: cli.py  manifest.py  scanner.py  ui.py  utils.py
src/codescribe/analyzers/: dependency.py  framework.py  git.py  language.py
src/codescribe/ignore/: __init__.py  codescribeignore.py  gitignore.py
