[project]
name = "codescribe"
version = "0.1.0"
description = "Generate AI-ready project manifests."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kirvy Gian Perez" }
]

dependencies = [
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
codescribe = "codescribe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
